--- a/0312자료구조/0312자료구조.vcxproj.filters
+++ b/0312자료구조/0312자료구조.vcxproj.filters
@@ -18,5 +18,8 @@
     <ClCompile Include="shcool.c">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="0312subject.c">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
