--- a/0312자료구조/0312자료구조.vcxproj
+++ b/0312자료구조/0312자료구조.vcxproj
@@ -127,6 +127,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="0312subject.c" />
     <ClCompile Include="shcool.c" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
