--- a/0312자료구조/0312자료구조.vcxproj.filters
+++ b/0312자료구조/0312자료구조.vcxproj.filters
@@ -18,7 +18,10 @@
     <ClCompile Include="shcool.c">
       <Filter>소스 파일</Filter>
     </ClCompile>
-    <ClCompile Include="0312subject.c">
+    <ClCompile Include="03120_5520059_prime.c">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="0314_5520059_1.c">
       <Filter>소스 파일</Filter>
     </ClCompile>
   </ItemGroup>
