--- a/0312자료구조/0312자료구조.vcxproj
+++ b/0312자료구조/0312자료구조.vcxproj
@@ -129,6 +129,8 @@
   <ItemGroup>
     <ClCompile Include="0312_prime.c" />
     <ClCompile Include="0314_5520059_1.c" />
+    <ClCompile Include="0319_5520059_fact.c" />
+    <ClCompile Include="0319_5520059_pwoer.c" />
     <ClCompile Include="shcool.c" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
